The Cloud gives a warning when the emailer has not yet been set up
This fixes https://github.com/bibledit/cloud/issues/12. When Bibledit
Cloud has been installed, but an SMTP server has not yet been entered,
plus other details, the Cloud instance cannot send email yet. All
places in the GUI where email can be sent from, give feedback there
about the issue at hand.

--- a/locale/bibledit.pot
+++ b/locale/bibledit.pot
@@ -2344,6 +2344,12 @@ msgid ""
 "sent out to the account above:"
 msgstr ""
 
+msgid "Cannot send email yet."
+msgstr ""
+
+msgid "Set up the mailer."
+msgstr ""
+
 msgid "Submit to the Bible Drop Box"
 msgstr ""
 
