Checks on the presence of the \toc[1-3] markers
This fixes https://github.com/bibledit/cloud/issues/62

--- a/locale/bibledit.pot
+++ b/locale/bibledit.pot
@@ -718,6 +718,15 @@ msgstr ""
 msgid "Closing marker does not match opening marker"
 msgstr ""
 
+msgid "The book lacks the marker for the verbose book name:"
+msgstr ""
+
+msgid "The book lacks the marker for the short book name:"
+msgstr ""
+
+msgid "The following marker belongs in chapter 0:"
+msgstr ""
+
 msgid "No punctuation at end of verse:"
 msgstr ""
 
