Gradually convert consultation notes to the new storage format
This fixes https://github.com/bibledit/cloud/issues/64

--- a/locale/bibledit.pot
+++ b/locale/bibledit.pot
@@ -3072,6 +3072,9 @@ msgstr ""
 msgid "no Bible"
 msgstr ""
 
+msgid "The following notes were upgraded to the newest storage format:"
+msgstr ""
+
 msgid "Query about a change in the text"
 msgstr ""
 
