Working on French-style citations
The check is ready. Unit tests are ready also.
https://github.com/bibledit/cloud/issues/94

--- a/locale/bibledit.pot
+++ b/locale/bibledit.pot
@@ -4422,6 +4422,9 @@ msgstr ""
 msgid "no-break space at French punctuation"
 msgstr ""
 
+msgid "multiple « in French citation style"
+msgstr ""
+
 msgid "Settings for the sentence structure"
 msgstr ""
 
