Localize Bible book order page
http://localhost:8080/bible/order?bible=xxx
https://github.com/bibledit/cloud/issues/110

--- a/locale/nl.po
+++ b/locale/nl.po
@@ -3545,16 +3545,16 @@ msgid "Matthew"
 msgstr ""
 
 msgid "Mark"
-msgstr ""
+msgstr "Marcus"
 
 msgid "Luke"
-msgstr ""
+msgstr "Lukas"
 
 msgid "John"
-msgstr ""
+msgstr "Johannes"
 
 msgid "Acts"
-msgstr ""
+msgstr "Handelingen"
 
 msgid "Romans"
 msgstr ""
