--- a/locale/bibledit.pot
+++ b/locale/bibledit.pot
@@ -6006,6 +6006,9 @@ msgstr ""
 msgid "Submit the Bible to the Bible Drop Box now."
 msgstr ""
 
+msgid "Visit the Bible Drop Box for more options."
+msgstr ""
+
 msgid "Username"
 msgstr ""
 
