--- a/locale/fr.po
+++ b/locale/fr.po
@@ -6590,6 +6590,9 @@ msgstr ""
 msgid "Submit the Bible to the Bible Drop Box now."
 msgstr "Soumettez la Bible à Bible Drop Box maintenant."
 
+msgid "Visit the Bible Drop Box for more options."
+msgstr ""
+
 msgid "Username"
 msgstr "Identifiant"
 
