--- a/locale/fr.po
+++ b/locale/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bibledit\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"PO-Revision-Date: 2018-01-02 18:49+0000\n"
+"PO-Revision-Date: 2018-01-03 07:49+0000\n"
 "Last-Translator: L'Africain <Unknown>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -7114,13 +7114,17 @@ msgstr ""
 
 msgid "The Google mail account should let less secure apps use the account."
 msgstr ""
+"Le compte de messagerie Google doit permettre aux applications moins "
+"sécurisées d'utiliser le compte."
 
 msgid "Bibledit email setup requires this."
-msgstr ""
+msgstr "La configuration du courriel pour Bibledit le requiert."
 
 msgid ""
 "In case the setup fails to work, all diagnostics can be seen in the Journal."
 msgstr ""
+"Au cas où la configuration échoue, tous les diagnostics peuvent être "
+"visualisés dans le journal."
 
 msgid "Site name and email address"
 msgstr "Nom du site et adresse courriel"
