--- a/locale/lt.po
+++ b/locale/lt.po
@@ -7197,6 +7197,9 @@ msgstr ""
 msgid "Show from the Word where this is the case."
 msgstr ""
 
+msgid "bibledit"
+msgstr ""
+
 msgid "Licenses"
 msgstr ""
 
