--- a/locale/nl.po
+++ b/locale/nl.po
@@ -7206,6 +7206,9 @@ msgstr ""
 msgid "Show from the Word where this is the case."
 msgstr ""
 
+msgid "bibledit"
+msgstr ""
+
 msgid "Licenses"
 msgstr ""
 
