--- a/locale/pt_BR.po
+++ b/locale/pt_BR.po
@@ -7187,6 +7187,9 @@ msgstr ""
 msgid "Show from the Word where this is the case."
 msgstr ""
 
+msgid "bibledit"
+msgstr ""
+
 msgid "Licenses"
 msgstr ""
 
