--- a/locale/tr.po
+++ b/locale/tr.po
@@ -7193,6 +7193,9 @@ msgstr ""
 msgid "Show from the Word where this is the case."
 msgstr ""
 
+msgid "bibledit"
+msgstr ""
+
 msgid "Licenses"
 msgstr ""
 
